# deuflhard-newton

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_orbit_shooting.py  02_optimization_foc.py  03_chemical_equilibrium.py  04_curve_fitting_lm.py  05_structural_mechanics.py
src/deuflhard_newton/: __init__.py  _numba_backend.py  jac.py  lm.py  nleq.py  result.py  scaling.py  solve.py
tests/: test_basic_convergence.py  test_classic.py  test_convergence.py  test_convergence_order.py  test_exceptions.py  test_failure_modes.py  test_lm.py  test_scaling.py
