[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deuflhard-newton"
version = "0.1.0"
description = "Newton-type methods for nonlinear equation systems"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
